--- a/index.html
+++ b/index.html
@@ -3,120 +3,181 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nitrility Privacy Policy</title>
+  <title>UPDATED Nitrility Privacy Policy</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900 font-sans">
-  <div class="max-w-3xl mx-auto px-4 py-12">
-    <h1 class="text-3xl font-bold mb-6">Nitrility Privacy Policy</h1>
-    <p class="text-sm text-gray-600 mb-8">Effective Date: [Insert Launch Date]<br>Last Updated: [Insert Today’s Date]</p>
+  <main class="max-w-3xl mx-auto px-4 py-12 space-y-16">
 
-    <p class="mb-6">Nitrility Inc. ("Nitrility", "we", "us", or "our") respects your privacy. This Privacy Policy explains what information we collect, how we use it, and your rights regarding your data.</p>
+    <!-- Header -->
+    <header class="text-center">
+      <h1 class="text-4xl font-bold mb-2">UPDATED Nitrility Privacy Policy</h1>
+      <p class="text-sm text-gray-600">
+        Effective Date: [Insert Launch Date] <br />
+        Last Updated: [Insert Today’s Date]
+      </p>
+    </header>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">1. Who We Are</h2>
-    <p class="mb-6">Nitrility Inc. is a Delaware C-Corporation. We operate a platform that helps buyers discover and request licenses for music and other creative works. We take privacy seriously and limit the data we collect to what’s necessary to operate our services.</p>
+    <!-- Intro -->
+    <section>
+      <p class="mb-4">
+        Nitrility Inc. ("Nitrility", "we", "us", or "our") respects your privacy. This Privacy Policy explains what information we collect, how we use it, and your rights regarding your data.
+      </p>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">2. What Information We Collect</h2>
-    <p class="font-semibold mb-2">Account Information</p>
-    <ul class="list-disc pl-6 mb-4">
-      <li>Email address (used for login, notifications)</li>
-      <li>Google login metadata (if signing in via Google)</li>
-      <li>Hashed password (if signing in via email/password)</li>
-    </ul>
-    <p class="mb-4">This data is stored securely via Supabase, our authentication and database provider.</p>
+    <!-- Who We Are -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">1. Who We Are</h2>
+      <p>
+        Nitrility Inc. is a Delaware C-Corporation. We operate a platform that helps buyers discover and request licenses for music and other creative works. We take privacy seriously and limit the data we collect to what’s necessary to operate our services.
+      </p>
+    </section>
 
-    <p class="font-semibold mb-2">Technical Data</p>
-    <ul class="list-disc pl-6 mb-4">
-      <li>IP address</li>
-      <li>Browser type and device type</li>
-      <li>Country-level location (derived from IP)</li>
-      <li>Timestamps and user agent (for analytics and security logging)</li>
-    </ul>
-    <p class="mb-4">This is processed via Framer (analytics), Supabase (logs), and Stripe (payments).</p>
+    <!-- What Information We Collect -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">2. What Information We Collect</h2>
 
-    <p class="font-semibold mb-2">Payment Data</p>
-    <ul class="list-disc pl-6 mb-4">
-      <li>Stripe collects your name, card number, billing address, IP address, and device/browser info.</li>
-      <li>Nitrility does not store your payment details.</li>
-    </ul>
+      <article class="mb-6">
+        <h3 class="font-semibold mb-2">Account Information</h3>
+        <ul class="list-disc pl-6">
+          <li>Email address (used for login, notifications)</li>
+          <li>Google login metadata (if signing in via Google)</li>
+          <li>Hashed password (if signing in via email/password)</li>
+        </ul>
+        <p class="mt-2">Stored securely via Supabase.</p>
+      </article>
 
-    <p class="font-semibold mb-2">Email Communication</p>
-    <ul class="list-disc pl-6 mb-4">
-      <li>Email address</li>
-      <li>Name (if provided)</li>
-      <li>Message content</li>
-    </ul>
-    <p class="mb-4">Emails may include optional tracking (e.g. open/click events) strictly for delivery performance, not advertising.</p>
+      <article class="mb-6">
+        <h3 class="font-semibold mb-2">Technical Data</h3>
+        <ul class="list-disc pl-6">
+          <li>IP address</li>
+          <li>Browser type and device type</li>
+          <li>Country-level location (from IP)</li>
+          <li>Timestamps and user agent</li>
+        </ul>
+        <p class="mt-2">Processed via Framer, Supabase, and Stripe.</p>
+      </article>
 
-    <p class="font-semibold mb-2">Content Previews</p>
-    <ul class="list-disc pl-6 mb-4">
-      <li>Your IP address and browser info may be shared with Spotify or Deezer CDNs to deliver media files.</li>
-      <li>No personal information is shared beyond what is technically required to stream a preview.</li>
-    </ul>
+      <article class="mb-6">
+        <h3 class="font-semibold mb-2">Payment Data</h3>
+        <ul class="list-disc pl-6">
+          <li>Stripe collects name, card info, billing address, IP, and device/browser info</li>
+          <li>Nitrility does not store your payment details</li>
+        </ul>
+      </article>
 
-    <p class="font-semibold mb-2">AI Features</p>
-    <p class="mb-6">Some features (e.g. music recommendations) use OpenAI API. No personally identifiable user data is sent to OpenAI. Prompts are anonymized and processed server-side.</p>
+      <article class="mb-6">
+        <h3 class="font-semibold mb-2">Email Communication</h3>
+        <ul class="list-disc pl-6">
+          <li>Email address</li>
+          <li>Name (if provided)</li>
+          <li>Message content</li>
+        </ul>
+        <p class="mt-2">Optional tracking is for delivery performance only.</p>
+      </article>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">3. How We Use Your Information</h2>
-    <ul class="list-disc pl-6 mb-6">
-      <li>Authenticate and manage your account</li>
-      <li>Deliver requested services (e.g., licensing)</li>
-      <li>Communicate with you (transactional messages)</li>
-      <li>Prevent fraud and protect our platform</li>
-      <li>Understand how the platform is used (via anonymized analytics)</li>
-    </ul>
+      <article class="mb-6">
+        <h3 class="font-semibold mb-2">Content Previews</h3>
+        <p>Your IP and browser info may be shared with Spotify/Deezer CDNs to deliver media. No unnecessary data is shared.</p>
+      </article>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">4. Third Parties We Share Data With</h2>
-    <p class="mb-4">We share data only with essential service providers:</p>
-    <ul class="list-disc pl-6 mb-6">
-      <li>Supabase – Authentication and database</li>
-      <li>Stripe – Payment processing</li>
-      <li>Framer – Privacy-first analytics</li>
-      <li>Spotify / Deezer – Song previews</li>
-      <li>OpenAI – AI content generation (server-side only)</li>
-      <li>Resend – Transactional emails</li>
-    </ul>
-    <p class="mb-6">Each of these providers complies with privacy laws like GDPR and operates under strict security standards. We do not sell your data or allow third-party advertising.</p>
+      <article>
+        <h3 class="font-semibold mb-2">AI Features</h3>
+        <p>OpenAI is used for music recommendations. No personally identifiable data is sent. All prompts are anonymized and handled server-side.</p>
+      </article>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">5. Cookies & Tracking</h2>
-    <ul class="list-disc pl-6 mb-6">
-      <li>Nitrility does not use advertising cookies or behavioral trackers.</li>
-      <li>Framer Analytics is cookieless and anonymized.</li>
-      <li>Stripe sets functional cookies for fraud prevention during checkout.</li>
-      <li>No other cookies or local storage are used for marketing or tracking purposes.</li>
-    </ul>
+    <!-- How We Use -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">3. How We Use Your Information</h2>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>Authenticate and manage your account</li>
+        <li>Deliver requested services</li>
+        <li>Send transactional communications</li>
+        <li>Prevent fraud and secure the platform</li>
+        <li>Analyze usage via anonymized analytics</li>
+      </ul>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">6. Marketing & Email Preferences</h2>
-    <ul class="list-disc pl-6 mb-6">
-      <li>As of now, Nitrility does not send marketing emails.</li>
-      <li>In the future, you may choose to opt-in to receive updates, features, or opportunities via email.</li>
-      <li>You will be able to unsubscribe at any time via a link in the email.</li>
-    </ul>
+    <!-- Third Parties -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">4. Third Parties We Share Data With</h2>
+      <p class="mb-4">We only share data with essential providers:</p>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>Supabase – Authentication and database</li>
+        <li>Stripe – Payments</li>
+        <li>Framer – Analytics</li>
+        <li>Spotify / Deezer – Media previews</li>
+        <li>OpenAI – AI content (server-side)</li>
+        <li>Resend – Transactional emails</li>
+      </ul>
+      <p class="mt-2">All providers comply with laws like GDPR and do not use your data for advertising.</p>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">7. Data Retention</h2>
-    <p class="mb-6">We retain your personal data for as long as your account is active. If you delete your account or request deletion, we will erase your data from our systems (except where required by law, e.g., payment records).</p>
+    <!-- Cookies -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">5. Cookies & Tracking</h2>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>No advertising or behavioral cookies</li>
+        <li>Framer Analytics is cookieless</li>
+        <li>Stripe uses functional cookies for fraud protection</li>
+        <li>No marketing cookies or local storage is used</li>
+      </ul>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">8. Your Rights</h2>
-    <ul class="list-disc pl-6 mb-6">
-      <li>Access the data we hold about you</li>
-      <li>Correct inaccurate data</li>
-      <li>Request deletion of your data</li>
-      <li>Withdraw consent for marketing (once implemented)</li>
-    </ul>
-    <p class="mb-6">To exercise any of these rights, email <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>. We may need to verify your identity before fulfilling your request.</p>
+    <!-- Marketing -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">6. Marketing & Email Preferences</h2>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>We do not send marketing emails yet</li>
+        <li>You may opt in later for updates</li>
+        <li>All future emails will have unsubscribe links</li>
+      </ul>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">9. Data Transfers</h2>
-    <p class="mb-6">Some of our processors (e.g., Stripe, OpenAI, Supabase) may process your data outside your country. These providers comply with the GDPR and offer appropriate safeguards such as Standard Contractual Clauses or participation in the EU–U.S. Data Privacy Framework.</p>
+    <!-- Data Retention -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">7. Data Retention</h2>
+      <p>We keep your data while your account is active. If you delete your account or request erasure, we’ll delete it unless legally required to retain it.</p>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">10. Children’s Privacy</h2>
-    <p class="mb-6">We do not knowingly collect personal data from children under 13. If you believe your child has provided us with personal information, contact us immediately at <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>.</p>
+    <!-- Your Rights -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">8. Your Rights</h2>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>Access your data</li>
+        <li>Correct inaccuracies</li>
+        <li>Request deletion</li>
+        <li>Withdraw marketing consent (when available)</li>
+      </ul>
+      <p class="mt-2">To exercise your rights, email <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>. We may verify your identity.</p>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">11. Changes to This Policy</h2>
-    <p class="mb-6">We may update this policy from time to time. When we do, we’ll update the "Last Updated" date at the top of this page. Continued use of Nitrility after changes means you accept the updated policy.</p>
+    <!-- Data Transfers -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">9. Data Transfers</h2>
+      <p>Some providers may process your data outside your country. They adhere to GDPR safeguards such as Standard Contractual Clauses or the EU–U.S. Data Privacy Framework.</p>
+    </section>
 
-    <h2 class="text-2xl font-semibold mt-8 mb-4">12. Contact Us</h2>
-    <p class="mb-6">If you have questions about this Privacy Policy or how we handle your data:<br>
-    📧 <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a></p>
-  </div>
+    <!-- Children's Privacy -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">10. Children’s Privacy</h2>
+      <p>We do not knowingly collect data from children under 13. If you suspect this has occurred, contact us at <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>.</p>
+    </section>
+
+    <!-- Changes -->
+    <section>
+      <h2 class="text-2xl font-semibold mb-4">11. Changes to This Policy</h2>
+      <p>We may update this policy occasionally. The "Last Updated" date at the top will reflect changes. Continued use implies acceptance of updates.</p>
+    </section>
+
+    <!-- Contact -->
+    <footer class="pt-8 border-t">
+      <h2 class="text-2xl font-semibold mb-2">12. Contact Us</h2>
+      <p>If you have questions about this policy or how we manage data:</p>
+      <p class="mt-1">📧 <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a></p>
+    </footer>
+
+  </main>
 </body>
 </html>
