--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UPDATED Nitrility Privacy Policy</title>
+  <title>Nitrility Privacy Policy</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Load Geist from @fontsource -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/geist-sans@4.2.1/index.min.css" />
+  <style>
+    body {
+      font-family: 'Geist Sans', sans-serif;
+    }
+  </style>
 </head>
-<body class="bg-white text-gray-900 font-sans">
+<body class="bg-black text-white">
   <main class="max-w-3xl mx-auto px-4 py-12 space-y-16">
 
-    <!-- Header -->
     <header class="text-center">
-      <h1 class="text-4xl font-bold mb-2">UPDATED Nitrility Privacy Policy</h1>
-      <p class="text-sm text-gray-600">
+      <h1 class="text-4xl font-bold mb-2"> GEIST Nitrility Privacy Policy</h1>
+      <p class="text-sm text-gray-400">
         Effective Date: [Insert Launch Date] <br />
         Last Updated: [Insert Today’s Date]
       </p>
     </header>
 
-    <!-- Intro -->
     <section>
       <p class="mb-4">
         Nitrility Inc. ("Nitrility", "we", "us", or "our") respects your privacy. This Privacy Policy explains what information we collect, how we use it, and your rights regarding your data.
       </p>
     </section>
 
-    <!-- Who We Are -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">1. Who We Are</h2>
       <p>
@@ -33,7 +38,6 @@
       </p>
     </section>
 
-    <!-- What Information We Collect -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">2. What Information We Collect</h2>
 
@@ -44,7 +48,7 @@
           <li>Google login metadata (if signing in via Google)</li>
           <li>Hashed password (if signing in via email/password)</li>
         </ul>
-        <p class="mt-2">Stored securely via Supabase.</p>
+        <p class="mt-2 text-gray-300">Stored securely via Supabase.</p>
       </article>
 
       <article class="mb-6">
@@ -55,7 +59,7 @@
           <li>Country-level location (from IP)</li>
           <li>Timestamps and user agent</li>
         </ul>
-        <p class="mt-2">Processed via Framer, Supabase, and Stripe.</p>
+        <p class="mt-2 text-gray-300">Processed via Framer, Supabase, and Stripe.</p>
       </article>
 
       <article class="mb-6">
@@ -73,7 +77,7 @@
           <li>Name (if provided)</li>
           <li>Message content</li>
         </ul>
-        <p class="mt-2">Optional tracking is for delivery performance only.</p>
+        <p class="mt-2 text-gray-300">Optional tracking is for delivery performance only.</p>
       </article>
 
       <article class="mb-6">
@@ -87,7 +91,6 @@
       </article>
     </section>
 
-    <!-- How We Use -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">3. How We Use Your Information</h2>
       <ul class="list-disc pl-6 space-y-1">
@@ -99,7 +102,6 @@
       </ul>
     </section>
 
-    <!-- Third Parties -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">4. Third Parties We Share Data With</h2>
       <p class="mb-4">We only share data with essential providers:</p>
@@ -111,10 +113,9 @@
         <li>OpenAI – AI content (server-side)</li>
         <li>Resend – Transactional emails</li>
       </ul>
-      <p class="mt-2">All providers comply with laws like GDPR and do not use your data for advertising.</p>
+      <p class="mt-2 text-gray-300">All providers comply with laws like GDPR and do not use your data for advertising.</p>
     </section>
 
-    <!-- Cookies -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">5. Cookies & Tracking</h2>
       <ul class="list-disc pl-6 space-y-1">
@@ -125,7 +126,6 @@
       </ul>
     </section>
 
-    <!-- Marketing -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">6. Marketing & Email Preferences</h2>
       <ul class="list-disc pl-6 space-y-1">
@@ -135,13 +135,11 @@
       </ul>
     </section>
 
-    <!-- Data Retention -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">7. Data Retention</h2>
       <p>We keep your data while your account is active. If you delete your account or request erasure, we’ll delete it unless legally required to retain it.</p>
     </section>
 
-    <!-- Your Rights -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">8. Your Rights</h2>
       <ul class="list-disc pl-6 space-y-1">
@@ -150,32 +148,28 @@
         <li>Request deletion</li>
         <li>Withdraw marketing consent (when available)</li>
       </ul>
-      <p class="mt-2">To exercise your rights, email <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>. We may verify your identity.</p>
+      <p class="mt-2">To exercise your rights, email <a href="mailto:hello@nitrility.com" class="text-blue-400 underline">hello@nitrility.com</a>. We may verify your identity.</p>
     </section>
 
-    <!-- Data Transfers -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">9. Data Transfers</h2>
       <p>Some providers may process your data outside your country. They adhere to GDPR safeguards such as Standard Contractual Clauses or the EU–U.S. Data Privacy Framework.</p>
     </section>
 
-    <!-- Children's Privacy -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">10. Children’s Privacy</h2>
-      <p>We do not knowingly collect data from children under 13. If you suspect this has occurred, contact us at <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a>.</p>
+      <p>We do not knowingly collect data from children under 13. If you suspect this has occurred, contact us at <a href="mailto:hello@nitrility.com" class="text-blue-400 underline">hello@nitrility.com</a>.</p>
     </section>
 
-    <!-- Changes -->
     <section>
       <h2 class="text-2xl font-semibold mb-4">11. Changes to This Policy</h2>
       <p>We may update this policy occasionally. The "Last Updated" date at the top will reflect changes. Continued use implies acceptance of updates.</p>
     </section>
 
-    <!-- Contact -->
-    <footer class="pt-8 border-t">
+    <footer class="pt-8 border-t border-gray-700">
       <h2 class="text-2xl font-semibold mb-2">12. Contact Us</h2>
       <p>If you have questions about this policy or how we manage data:</p>
-      <p class="mt-1">📧 <a href="mailto:hello@nitrility.com" class="text-blue-600 underline">hello@nitrility.com</a></p>
+      <p class="mt-1">📧 <a href="mailto:hello@nitrility.com" class="text-blue-400 underline">hello@nitrility.com</a></p>
     </footer>
 
   </main>
